...
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tVRepeatPassphraseHint"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTRepeatedPassphrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
...
            android:layout_height="@dimen/default_margin_content_small"
            android:progress="0" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btConfirmPassphrase"
        style="@style/AppWidget.Button.Big"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/default_margin_content_big"
        android:text="@string/confirm_pass_phrase"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
...
